[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/high_score.gd" type="Script" id=1]
[ext_resource path="res://Art/Death Screen/Retry Button HL-normal.png" type="Texture" id=2]
[ext_resource path="res://Art/Death Screen/Menu Button.png" type="Texture" id=3]
[ext_resource path="res://Art/Death Screen/Menu Button HL-normal.png" type="Texture" id=4]
[ext_resource path="res://Art/Death Screen/Retry Button.png" type="Texture" id=5]

[node name="high_score" type="Node2D"]
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_left = 173.0
margin_top = 26.0
margin_right = 248.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
text = "High Scores"
align = 1
valign = 1

[node name="high_scores" type="GridContainer" parent="."]
margin_left = 105.0
margin_top = 70.0
margin_right = 256.0
margin_bottom = 215.0
rect_scale = Vector2( 2, 2 )
custom_constants/hseparation = 40
columns = 3

[node name="retryButton" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = 380.0
margin_right = 370.0
margin_bottom = 428.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )

[node name="menuButton" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = 444.0
margin_right = 370.0
margin_bottom = 492.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[connection signal="button_up" from="retryButton" to="." method="_on_retryButton_button_up"]
[connection signal="button_up" from="menuButton" to="." method="_on_menuButton_button_up"]
